# ansible-docker

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .travis.yml  .yamllint  CHANGELOG.md  README.md  galaxy.yml  molecule-test-cgroup-filter.sh  playbook.yml  pyproject.toml  requirements-dev.txt  requirements-py311.txt  requirements.txt  tox-ansible-v2-faked-galaxy-role-installer.py  tox-ansible.ini  tox-ansible.sh  tox-ansible1-matrix-export-json.sh  tox.ini
.github/: settings.yml
.github/workflows/: default.yml  release-galaxy.yml  test-molecule.yml  test-tox.yml
defaults/: main.yml
files/version-file/: docker-distribution=centos.json  docker-distribution=centos.sh  docker-distribution=debian.json  docker-distribution=debian.sh  docker-distribution=dsm.json  docker-distribution=dsm.sh  docker-distribution=fedora.json  docker-distribution=fedora.sh  docker-distribution=raspbian.json  docker-distribution=raspbian.sh  docker-distribution=rhel.json  docker-distribution=rhel.sh  docker-distribution=sles.json  docker-distribution=sles.sh  docker-distribution=ubuntu.json  docker-distribution=ubuntu.sh
handlers/: main.yml
meta/: main.yml
molecule/almalinux8@cgroupv1/: molecule.yml
molecule/almalinux8@cgroupv2/: molecule.yml
molecule/almalinux9@cgroupv1/: molecule.yml
molecule/almalinux9@cgroupv2/: molecule.yml
molecule/alpine317@cgroupv1/: molecule.yml
molecule/alpine317@cgroupv2/: molecule.yml
molecule/alpine318@cgroupv1/: molecule.yml
molecule/alpine318@cgroupv2/: molecule.yml
molecule/alpine319@cgroupv1/: molecule.yml
molecule/alpine319@cgroupv2/: molecule.yml
molecule/alpine320@cgroupv1/: molecule.yml
molecule/alpine320@cgroupv2/: molecule.yml
molecule/alpine321@cgroupv1/: molecule.yml
molecule/alpine321@cgroupv2/: molecule.yml
molecule/amazonlinux2023@cgroupv1/: molecule.yml
molecule/amazonlinux2023@cgroupv2/: molecule.yml
molecule/amazonlinux2@cgroupv1/: molecule.yml
molecule/centos-stream10@cgroupv2/: molecule.yml
molecule/centos-stream8@cgroupv1/: molecule.yml
molecule/centos-stream8@cgroupv2/: Dockerfile.j2  molecule.yml
molecule/centos-stream9@cgroupv1/: molecule.yml
molecule/centos-stream9@cgroupv2/: Dockerfile.j2  molecule.yml
molecule/centos7/: molecule.yml
molecule/centos7@cgroupv1/: Dockerfile.j2  molecule.yml
molecule/centos7@cgroupv2/: Dockerfile.j2  molecule.yml
molecule/centos8/: Dockerfile.j2  molecule.yml
molecule/centos8@cgroupv1/: molecule.yml
molecule/centos8@cgroupv2/: molecule.yml
molecule/config-service@cgroupv2/: converge.yml  molecule.yml  verify.yml
molecule/debian10/: molecule.yml
molecule/debian10@cgroupv1/: molecule.yml
molecule/debian10@cgroupv2/: molecule.yml
molecule/debian11@cgroupv1/: molecule.yml
molecule/debian11@cgroupv2/: molecule.yml
molecule/debian12@cgroupv1/: molecule.yml
molecule/debian12@cgroupv2/: molecule.yml
molecule/debian13@cgroupv1/: molecule.yml
molecule/debian13@cgroupv2/: molecule.yml
molecule/debian9/: molecule.yml
molecule/debian9@cgroupv1/: Dockerfile.j2  molecule.yml
molecule/debian9@cgroupv2/: molecule.yml
molecule/dsm62-container@any/: README.md  molecule.yml
molecule/dsm62-converge@any/: README.md  converge.yml  molecule.yml
molecule/dsm62-create@any/: README.md  converge.yml  molecule.yml
molecule/dsm62-test@any/: README.md  converge.yml  molecule.yml
molecule/dsm70-container@any/: Dockerfile.j2  README.md  molecule.yml
molecule/dsm70-converge@any/: README.md
molecule/dsm70-create@any/: README.md  molecule.yml
molecule/dsm70-test@any/: README.md  converge.yml  molecule.yml  prepare.yml  verify.yml
molecule/dsm71-container@any/: README.md  molecule.yml  syntax.yml
molecule/dsm71-converge@any/: README.md  molecule.yml
molecule/dsm71-create@any/: README.md  molecule.yml
molecule/dsm71-test@any/: README.md  converge.yml  molecule.yml
molecule/dsm72-container@any/: README.md  molecule.yml
molecule/dsm72-converge@any/: README.md  molecule.yml  prepare.yml  verify.yml
molecule/dsm72-create@any/: README.md  molecule.yml
molecule/dsm72-test@any/: README.md  converge.yml  molecule.yml  verify.yml
molecule/fedora24@cgroupv1/: molecule.yml
molecule/fedora27@cgroupv1/: molecule.yml
molecule/fedora29@cgroupv1/: molecule.yml
molecule/fedora29@cgroupv2/: molecule.yml
molecule/fedora30@cgroupv1/: molecule.yml
molecule/fedora30@cgroupv2/: molecule.yml
molecule/fedora31@cgroupv1/: molecule.yml
molecule/fedora31@cgroupv2/: molecule.yml
molecule/fedora32@cgroupv1/: molecule.yml
molecule/fedora32@cgroupv2/: molecule.yml
molecule/fedora33@cgroupv1/: molecule.yml
molecule/fedora33@cgroupv2/: molecule.yml
molecule/fedora34@cgroupv1/: molecule.yml
molecule/fedora34@cgroupv2/: molecule.yml
molecule/fedora35@cgroupv1/: molecule.yml
molecule/fedora35@cgroupv2/: molecule.yml
molecule/fedora36@cgroupv1/: molecule.yml
molecule/fedora36@cgroupv2/: molecule.yml
molecule/fedora37@cgroupv1/: molecule.yml
molecule/fedora37@cgroupv2/: molecule.yml
molecule/fedora38@cgroupv1/: molecule.yml
tasks/: alpine.yml  config_docker.yml  config_docker_linux.yml  config_docker_windows.yml  debian.yml  debian_repository_apt.yml  debian_repository_deb822.yml  docker-1809-shim.yml  dsm.yml  fact_etc.yml  fact_etc_dsm.yml  fact_etc_windows.yml  fact_pkg.yml  images.yml  main.yml  openwrt.yml  redhat.yml  redhat_repository_amazon2.yml  redhat_repository_dnf.yml  redhat_repository_fedora31.yml  redhat_repository_yum.yml  service.yml  set_facts.yml  suse.yml  users.yml  windows.yml
tests/: .ansible-lint
vars/: AlmaLinux.yml  Amazon.yml  Fedora.yml  Rocky.yml  distribution=AlmaLinux.yml  distribution=Amazon.yml  distribution=CentOS+major=7.yml  distribution=CentOS+major=9.yml  distribution=DSM+major=62.yml  distribution=DSM+major=70.yml  distribution=DSM+major=71.yml  distribution=DSM+major=72.yml  distribution=Debian+release=trixie.yml  distribution=Fedora.yml  distribution=Rocky.yml  os-family=Debian.yml  os-family=OpenWrt.yml  os-family=RedHat.yml  os-family=Windows.yml
(+60 files in other folders)
