[tool.poetry]
name = "ansible-docker"
version = "0.2.1"
description = "Ansible role to install/configure Docker"
authors = ["Larry Smith Jr. <mrlesmithjr@gmail.com>", "xiaoyao9184"]
package-mode = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
# poetry use virtualenv and drop python < 3.7 support
# see https://virtualenv.pypa.io/en/latest/changelog.html#v20-27-0-2024-10-17
ansible = "^4.6.0"
autopep8 = "^1.5.6"
flake8 = "^3.9.0"
pycodestyle = "^2.7.0"
pylint = "^2.7.3"
tox = "^4.0.0"
tox-ansible = "^2.0.0"
black = "^24.8.0"
ansible-lint = "^5.1.3"
mkdocs = "^1.1.2"
# molecule > 4.0.0 support skip role-name check
# see https://github.com/ansible/ansible-compat/issues/78
molecule = {extras = ["docker"], version = "^4.0.0"}
yamllint = "^1.26.0"
mkdocs-material = "^7.3.0"
# lock version
# see https://github.com/docker/docker-py/issues/3256
requests = "<=2.32.0"
pre-commit = "<=3.5.0"

[dependency-groups]
# lock version
# fix https://github.com/docker/docker-py/issues/3256
requests = ["requests<=2.32.0"]
# molecule = [
#     "molecule",
#     "molecule-plugins[docker]",
#     "paramiko"
# ]
ansible218 = [
    "molecule",
    "molecule-plugins[docker]",
    "paramiko",
    "flake8",
    "ansible-lint",
    "ansible-core>=2.18.0,<2.19.0"
]
ansible217 = [
    "molecule",
    "molecule-plugins[docker]",
    "paramiko",
    "flake8",
    "ansible-lint",
    "ansible-core>=2.17.0,<2.18.0"
]
ansible216 = [
    "molecule",
    "molecule-plugins[docker]",
    "paramiko",
    "flake8",
    "ansible-lint",
    "ansible-core>=2.16.0,<2.17.0"
]
ansible215 = [
    "molecule",
    "molecule-plugins[docker]",
    "paramiko",
    "flake8",
    "ansible-lint",
    "ansible-core>=2.15.0,<2.16.0"
]
ansible214 = [
    "molecule",
    "molecule-plugins[docker]",
    "paramiko",
    "flake8",
    "ansible-lint",
    "ansible-core>=2.14.0,<2.15.0"
]
ansible213 = [
    "molecule",
    "molecule-plugins[docker]",
    "paramiko",
    "flake8",
    "ansible-lint",
    "ansible-core>=2.13.0,<2.14.0"
]
ansible212 = [
    "molecule",
    "molecule-plugins[docker]",
    "paramiko",
    "flake8",
    "ansible-lint",
    "ansible-core>=2.12.0,<2.13.0"
]
ansible211 = [
    "molecule",
    "molecule-plugins[docker]",
    "paramiko",
    "flake8",
    "ansible-lint",
    "ansible-core>=2.11.0,<2.12.0"
]
ansible210 = [
    "molecule[docker]",
    "paramiko",
    "flake8",
    # BUG in 2.10.17
    # fix `ImportError: cannot import name 'should_retry_error' from 'ansible.galaxy.api'`
    "ansible-base==2.10.16",
    # last support ansible-base is ansible-lint <= 5.1.3
    "ansible-lint<=5.1.3",
    # last support ansible-base is ansible-lint <= 5.1.3
    "ansible-compat<=2.2.7",
    # fix dependencies `rich` break change
    #  see https://github.com/ansible/ansible-lint/issues/1795
    "rich==10.11.0"
]
ansible29 = [
    "molecule",
    "molecule-docker<=1.1.0",
    "paramiko",
    "flake8",
    "ansible>=2.9.0,<2.10.0",
    # last support ansible-base is ansible-lint <= 5.1.3
    "ansible-lint<=5.1.3",
    # last support ansible-base is ansible-lint <= 5.1.3
    "ansible-compat<=2.2.7",
    # fix dependencies `rich` break change
    # see https://github.com/ansible/ansible-lint/issues/1795
    "rich==10.11.0"
]
