[tool.poetry]
name = "ansible-docker"
version = "0.2.1"
description = "Ansible role to install/configure Docker"
authors = ["Larry Smith Jr. <mrlesmithjr@gmail.com>", "xiaoyao9184"]
package-mode = false

[tool.poetry.dependencies]
# poetry use virtualenv and drop python < 3.7 support
# see https://virtualenv.pypa.io/en/latest/changelog.html#v20-27-0-2024-10-17
python = "^3.9"
ansible = "^8.0.0"
pyyaml = "^6.0"
cffi = "^1.15.1"

[tool.poetry.group.dev.dependencies]
autopep8 = "^1.5.6"
flake8 = "^3.9.0"
pycodestyle = "^2.7.0"
pylint = "^2.7.3"
tox = "^3.23.0"
black = "^24.3"
ansible-lint = "^5.1.3"
mkdocs = "^1.1.2"
# molecule > 4.0.0 support skip role-name check
# see https://github.com/ansible/ansible-compat/issues/78
molecule = {extras = ["docker"], version = "^4.0.0"}
yamllint = "^1.26.0"
mkdocs-material = "^7.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
